--- a/GUIOP_1/WPF_1/Wiev/MainWindow.xaml
+++ b/GUIOP_1/WPF_1/Wiev/MainWindow.xaml
@@ -6,17 +6,16 @@
         xmlns:local="clr-namespace:WPF_1"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <local:MainWindowViewModel />
+    </Window.DataContext>
     <Grid>
-        <DataGrid 
-            ItemsSource="{Binding Path=Depters}"
-            x:Name="DataGrid"
-            
-            IsSynchronizedWithCurrentItem="True"
-            HorizontalAlignment="Left" Height="340" Margin="35,40,0,0" VerticalAlignment="Top" Width="325"/>
         <Label Content="Label" HorizontalAlignment="Left" Margin="35,14,0,0" VerticalAlignment="Top"/>
         <Label Content="Label" HorizontalAlignment="Left" Margin="695,14,0,0" VerticalAlignment="Top"/>
         <Button Content="Add" Click="btn_add_click" HorizontalAlignment="Left" Margin="490,136,0,0" VerticalAlignment="Top" Width="74"/>
-        <ListBox HorizontalAlignment="Left" Height="100" Margin="430,265,0,0" VerticalAlignment="Top" Width="100"/>
+        <ListBox 
+            x:Name="ListBoxForDepters" ItemsSource="{Binding Depters}"    
+        HorizontalAlignment="Left" Height="278" Margin="35,57,0,0" VerticalAlignment="Top" Width="280"/>
 
     </Grid>
 </Window>
