--- a/GUIOP_1/WPF_1/Wiev/AddCollecter.xaml
+++ b/GUIOP_1/WPF_1/Wiev/AddCollecter.xaml
@@ -14,10 +14,13 @@
         <Button Content="Gem" HorizontalAlignment="Left" Margin="59,249,-64,0" VerticalAlignment="Top" Width="59" Grid.Row="1" Click="BtnGem_Click"/>
         <Button Content="Annulere" HorizontalAlignment="Left" Margin="345,243,-354,0" VerticalAlignment="Top" Width="63" Grid.Row="1" Click="BtnAnnulere_Click"/>
         <Label Content="Add depter"  HorizontalAlignment="Left" Margin="59,30,-127.333,0" VerticalAlignment="Top" Width="100"/>
+        
         <TextBox Name="txtB_Name" Text="{Binding Path=CurrentDepter.Name}" HorizontalAlignment="Left" Height="23" Margin="59,2,-206.333,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="179" TextChanged="TextBox_TextChanged"/>
         <Label Content="Navn" HorizontalAlignment="Left" Margin="0,2,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" Width="44"/>
         <Label Content="Beløb" HorizontalAlignment="Left" Margin="0,64,0,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Text="{Binding Path=CurrentDepter.Amount}" Height="23" Margin="59,68,-184,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="179"/>
+        <TextBox HorizontalAlignment="Left" Text="{Binding Path=CurrentDepter.Amount}"
+                 Height="23" Margin="59,68,-184,0" Grid.Row="1" TextWrapping="Wrap"
+                 VerticalAlignment="Top" Width="179"/>
 
 
     </Grid>
