--- a/GUIOP_1/WPF_1/Wiev/AddCollecter.xaml
+++ b/GUIOP_1/WPF_1/Wiev/AddCollecter.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="GUIOP_1.View.AddCollecter"
+﻿<Window x:Class="WPF_1.AddCollecter"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GUIOP_1.View"
+        xmlns:local="clr-namespace:WPF_1"
         mc:Ignorable="d"
         Title="AddCollecter" Height="450" Width="448.333">
     <Grid Margin="0,0,388,0">
