--- a/GUIOP_1/WPF_1/Wiev/MainWindow.xaml
+++ b/GUIOP_1/WPF_1/Wiev/MainWindow.xaml
@@ -14,7 +14,7 @@
         <Label Content="Label" HorizontalAlignment="Left" Margin="695,14,0,0" VerticalAlignment="Top"/>
         <Button Content="Add" Click="btn_add_click" HorizontalAlignment="Left" Margin="490,136,0,0" VerticalAlignment="Top" Width="74"/>
         <ListBox 
-            x:Name="ListBoxForDepters" ItemsSource="{Binding Depters}" 
+            x:Name="ListBoxForDepters" ItemsSource="{Binding Depters}"  SelectedItem="{Binding Path= CurrentDepter}"
         HorizontalAlignment="Left" Height="278" Margin="35,57,0,0" VerticalAlignment="Top" Width="280" SelectionChanged="ListBoxForDepters_SelectionChanged"/>
 
     </Grid>
