--- a/GUIOP_1/WPF_1/App.xaml
+++ b/GUIOP_1/WPF_1/App.xaml
@@ -4,6 +4,15 @@
              xmlns:local="clr-namespace:WPF_1"
              StartupUri="Wiev/MainWindow.xaml">
     <Application.Resources>
-         
+        <DataTemplate x:Key="deptersTemplate">
+            <WrapPanel>
+                <TextBlock  Text="{Binding Path=depterName}" Padding="5, 0"
+                           Width="100"
+                        />
+                <TextBlock  Text="{Binding Path=amount}" Padding="5, 0"
+                           Width="100"
+                        />
+            </WrapPanel>
+        </DataTemplate>    
     </Application.Resources>
 </Application>
