--- a/GUIOP_1/WPF_1/Wiev/MainWindow.xaml
+++ b/GUIOP_1/WPF_1/Wiev/MainWindow.xaml
@@ -13,17 +13,20 @@
         <Label Content="Depters" HorizontalAlignment="Left" Margin="35,14,0,0" VerticalAlignment="Top"/>
         <Label Content="Label" HorizontalAlignment="Left" Margin="695,14,0,0" VerticalAlignment="Top"/>
         <Button Content="Add" Click="btn_add_click" HorizontalAlignment="Left" Margin="490,136,0,0" VerticalAlignment="Top" Width="74"/>
-        <ListBox>
+        <ListBox
             Name="ListBoxForDepters" 
             ItemsSource="{Binding Path=Depters}"
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <TextBlock Text="{Binding depterName}"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+            SelectedItem="{Binding Path=CurrentDepter}"
+            SelectedIndex="{Binding Path=CurrentIndex}"
+
+            IsSynchronizedWithCurrentItem="True"
+            ItemTemplate="{StaticResource deptersTemplate}"
+            HorizontalAlignment="Left" 
+            Height="278" 
+            Margin="35,57,6,6" 
+            VerticalAlignment="Top" 
+            Width="280"/>
+        
 
 
     </Grid>
