--- a/GUIOP_1/WPF_1/Wiev/MainWindow.xaml
+++ b/GUIOP_1/WPF_1/Wiev/MainWindow.xaml
@@ -1,21 +1,24 @@
-﻿<Window x:Class="WPF_1.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_1"
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="WPF_1.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
         <local:MainWindowViewModel/>
     </Window.DataContext>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="279*"/>
+            <ColumnDefinition Width="515*"/>
+        </Grid.ColumnDefinitions>
         <Label Content="Depters" HorizontalAlignment="Left" Margin="35,14,0,0" VerticalAlignment="Top"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="695,14,0,0" VerticalAlignment="Top"/>
-        <Button Content="Add" Click="btn_add_click" HorizontalAlignment="Left" Margin="490,136,0,0" VerticalAlignment="Top" Width="74"/>
-        <ListBox>
-            Name="ListBoxForDepters" 
-            ItemsSource="{Binding Path=Depters}"
+        <Label Content="Label" HorizontalAlignment="Left" Margin="415.812,14,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Button Content="Add" Click="btn_add_click" HorizontalAlignment="Left" Margin="210.812,136,0,0" VerticalAlignment="Top" Width="74" Grid.Column="1"/>
+        <ListBox Grid.ColumnSpan="2">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
@@ -23,6 +26,8 @@
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
+            <System:String>Name="ListBoxForDepters" ItemsSource="{Binding Path=Depters}"</System:String>
+            />
         </ListBox>
 
 
