--- a/GUIOP_1/WPF_1/Wiev/AddCollecter.xaml
+++ b/GUIOP_1/WPF_1/Wiev/AddCollecter.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_1"
         mc:Ignorable="d"
-        Title="AddCollecter" Height="450" Width="448.333">
+        Title="AddCollecter" Height="450" Width="448.333"
+        ResizeMode="NoResize">
    
     
     <Grid Margin="0,0,388,0">
@@ -13,8 +14,8 @@
             <RowDefinition Height="87*"/>
             <RowDefinition Height="335*"/>
         </Grid.RowDefinitions>
-        <Button Content="Gem" HorizontalAlignment="Left" Margin="59,249,-64,0" VerticalAlignment="Top" Width="59" Grid.Row="1" Click="BtnGem_Click" Command="{Binding Path=AddNewDepterCommand}"/>
-        <Button Content="Annulere" HorizontalAlignment="Left" Margin="345,243,-354,0" VerticalAlignment="Top" Width="63" Grid.Row="1" Click="BtnAnnulere_Click"/>
+        <Button Content="Gem" HorizontalAlignment="Left" Margin="59,249,-64,0" VerticalAlignment="Top" Width="70" Grid.Row="1" Click="BtnGem_Click" Command="{Binding Path=AddNewDepterCommand}"/>
+        <Button Content="Annulere" HorizontalAlignment="Left" Margin="345,243,-354,0" VerticalAlignment="Top" Width="70" Grid.Row="1" Click="BtnAnnulere_Click"/>
         <Label Content="Add depter"  HorizontalAlignment="Left" Margin="59,30,-127.333,0" VerticalAlignment="Top" Width="100"/>
         
         <TextBox Name="txtB_Name" Text="{Binding Path= CurrentDepter.DepterName}" HorizontalAlignment="Left" Height="23" Margin="59,2,-206.333,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="179" TextChanged="TextBox_TextChanged"/>
