--- a/GUIOP_1/WPF_1/Wiev/AddCollecter.xaml
+++ b/GUIOP_1/WPF_1/Wiev/AddCollecter.xaml
@@ -7,23 +7,29 @@
         mc:Ignorable="d"
         Title="AddCollecter" Height="450" Width="448.333"
         ResizeMode="NoResize">
-   
-    
-    <Grid Margin="0,0,388,0">
+
+
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="87*"/>
-            <RowDefinition Height="335*"/>
+            <RowDefinition Height="86*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="113*"/>
+            <RowDefinition Height="158*"/>
         </Grid.RowDefinitions>
-        <Button Content="Gem" HorizontalAlignment="Left" Margin="59,249,-64,0" VerticalAlignment="Top" Width="70" Grid.Row="1" Click="BtnGem_Click" Command="{Binding Path=AddNewDepterCommand}"/>
-        <Button Content="Annulere" HorizontalAlignment="Left" Margin="345,243,-354,0" VerticalAlignment="Top" Width="70" Grid.Row="1" Click="BtnAnnulere_Click"/>
-        <Label Content="Add depter"  HorizontalAlignment="Left" Margin="59,30,-127.333,0" VerticalAlignment="Top" Width="100"/>
-        
-        <TextBox Name="txtB_Name" Text="{Binding Path= CurrentDepter.DepterName}" HorizontalAlignment="Left" Height="23" Margin="59,2,-206.333,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="179" TextChanged="TextBox_TextChanged"/>
-        <Label Content="Navn" HorizontalAlignment="Left" Margin="0,2,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" Width="44"/>
-        <Label Content="Beløb" HorizontalAlignment="Left" Margin="0,64,0,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Text="{Binding Path= CurrentDepter.Amount}"
-                 Height="23" Margin="59,68,-184,0" Grid.Row="1" TextWrapping="Wrap"
-                 VerticalAlignment="Top" Width="179" TextChanged="TextBox_TextChanged_1"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="300*"/>
+        </Grid.ColumnDefinitions>
+
+        <Button Content="Gem" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="70" Grid.Row="3" Grid.Column="1" Click="BtnGem_Click"  Command="{Binding Path=AddNewDepterCommand}"/>
+        <Button Content="Annulere" HorizontalAlignment="Center" VerticalAlignment="Top" Width="70" Grid.Row="3" Click="BtnAnnulere_Click" Grid.Column="1"/>
+        <Label Content="Add depter"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"/>
+
+        <TextBox Name="txtB_Name" Text="{Binding Path= CurrentDepter.DepterName}" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="179" Grid.ColumnSpan="2" Margin="63,86,0,0" Grid.RowSpan="2"/>
+        <Label Content="Navn" HorizontalAlignment="Left" Grid.Column="0" VerticalAlignment="Top" Width="44" Height="23" Margin="0,86,0,0" Grid.RowSpan="2"/>
+        <Label Content="Beløb" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Height="23" Margin="0,0.2,0,0"/>
+        <TextBox HorizontalAlignment="Left" Text="{Binding Path= CurrentDepter.Amount}"  TextWrapping="Wrap" Height="23" 
+                 VerticalAlignment="Top" Width="179" TextChanged="TextBox_TextChanged_1" Grid.Row="2" Grid.ColumnSpan="2" Margin="63,0.2,0,0"/>
 
 
     </Grid>
