--- a/GUIOP_1/WPF_1/Wiev/MainWindow.xaml
+++ b/GUIOP_1/WPF_1/Wiev/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="MainWindow" Height="450" Width="530.213"
         ResizeMode="NoResize">
     <Window.DataContext>
         <local:MainWindowViewModel/>
@@ -21,10 +21,22 @@
             </MenuItem>
         </Menu>
 
-        <Grid>
-            <Label Content="Depters" HorizontalAlignment="Left" Margin="35,14,0,0" VerticalAlignment="Top"/>
-            <Label Content="Label" HorizontalAlignment="Left" Margin="695,14,0,0" VerticalAlignment="Top"/>
-            <Button Content="Add" Command="{Binding Path=AddNewDepterCommand}" Style="{StaticResource ResourceKey=BottonStyle}" HorizontalAlignment="Left" Margin="366,136,0,0" VerticalAlignment="Top" Width="74"/>
+        <Grid Margin="0,0.4,0,0" Width="805">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="145*"/>
+                <ColumnDefinition Width="98*"/>
+
+                <ColumnDefinition Width="74*"/>
+                <ColumnDefinition Width="109*"/>
+                <ColumnDefinition Width="380"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="53*"/>
+                <RowDefinition Height="126*"/>
+                <RowDefinition Height="224*"/>
+            </Grid.RowDefinitions>
+            <Label Content="Depters" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="0"  VerticalAlignment="Top"/>
+            <Button Content="Add" Command="{Binding Path=AddNewDepterCommand}" Style="{StaticResource ResourceKey=BottonStyle}" HorizontalAlignment="Center" Grid.Column="3" Grid.Row="1" VerticalAlignment="Bottom" Width="74"/>
             <ListBox 
             Name="ListBoxForDepters" 
             ItemsSource="{Binding Path=Depters}"
@@ -34,11 +46,12 @@
             ItemTemplate="{StaticResource deptersTemplate}"
             HorizontalAlignment="Left" 
             Height="278" 
-            Margin="35,57,6,6" 
+            Margin="35,4.2,0,0" 
             VerticalAlignment="Top" 
-            Width="280"/>
-            <Button Content="Edit" HorizontalAlignment="Left" Margin="607,136,0,0" VerticalAlignment="Top" Width="74" />
-            <Button Command="{Binding DeleteDepterCommand}" Style="{StaticResource ResourceKey=BottonStyle}" Content="Delete" HorizontalAlignment="Left" Margin="495,136,0,0" VerticalAlignment="Top" Width="75" />
+            Width="280" Grid.Row="1" Grid.ColumnSpan="3" Grid.RowSpan="2"/>
+            <Button Command="{Binding DeleteDepterCommand}" Style="{StaticResource ResourceKey=BottonStyle}" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="75" Grid.Row="1" Grid.Column="4" Click="Button_Click" Margin="0.2,0,0,0.4" />
+            <Label Content="Navn" Grid.Column="0" HorizontalAlignment="Center"  Grid.Row="0" VerticalAlignment="Bottom" Margin="53,0,52.8,125.4" Grid.RowSpan="2"/>
+            <Label Content="Beløb" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="0" VerticalAlignment="Bottom" Margin="29.2,0,28.4,125.4" Grid.RowSpan="2"/>
 
         </Grid>
     </DockPanel>
